--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ sass:
 # Resume settings
 resume_avatar:                  "true"
 resume_name:                    "Lucy"
-resume_title:                   "Nuclear Safety Inspector"
+resume_title:                   "Who I am"
 resume_contact_email:
   "yureka5345@gmail.com"
 
